# misc-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data_io/: __init__.py  download_extract_files.py  readwrite_files.py
misc_utils/: __init__.py  base64_utils.py  beartyped_dataclass_patch.py  beartypes.py  build_cache_elsewhere.py  buildable.py  buildable_data.py  buildable_with_tear_down.py  cached_data.py  cached_data_specific.py  dataclass_utils.py  filelock_queuing.py  filelock_utils.py  final_methods.py  hashing_utils.py  hpc_computing_args.py  markdown_diagrams.py  mermaid_markdown_diagrams.py  persist_queue_cache_building.py  prefix_suffix.py  processing_utils.py  run_filebased_worker.py  setup_utils.py  utils.py  worker_pool.py
plotly_dash_utils/: minimal_example.py  plotly_dash_dataclassed.py
selenium_scraping/: README.md  selenium_util.py
tests/: debug_dash_dataclassed.py  debug_file_consuming.py  debug_persist_queue_caching.py  debug_process_with_threadpool_backpressure.py  debug_threadsafe_writing.py  run_parallel_filelock_queue.py  run_worker_pool.py  script.py  test_beartyped_dataclass.py  test_beartypes.py  test_buildable.py  test_cached_data.py  test_dataclass_serialization.py  test_markdown_table.py  test_pydantic.py  test_readwrite_files.py  test_utils.py
tests/resources/: test.jsonl
