[tool.poetry]
name = "misc-utils"
version = "0.1.0"
description = ""
authors = ["Tilo Himmelsbach <dertilo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beartype = "0.9.1"
filelock = {version = "^3.6.0", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
