[tool.poetry]
name = "misc-utils"
version = "0.1.0"
description = ""
authors = ["Tilo Himmelsbach <dertilo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
beartype = "0.9.1"
filelock = {version = "^3.6.0", optional = true}
numpy = {version = "^1.22.3", optional = true}

[tool.poetry.extras]
filelock = ["filelock"]
numpy = ["numpy"]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
