[tool.poetry]
name = "misc-utils"
version = "0.1.0"
description = ""
authors = ["Tilo Himmelsbach <dertilo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
beartype = "^0.10.4"
filelock = {version = "^3.6.0", optional = true}
numpy = {version = "^1.22.3", optional = true}
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.10.2%2Bcpu-cp39-cp39-linux_x86_64.whl" , optional = true}

#[tool.poetry.group.test.dependencies]
#torch = { version = "^1.11.0",optional = true} # is dependency of torchaudio

[tool.poetry.extras]
filelock = ["filelock"]
numpy = ["numpy"]
torch = ["torch"]
all = ["filelock","numpy","torch"]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
